# quant_system

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: demo.yaml
data/: sample_AAPL.csv
scripts/: run_dryrun.py  selfcheck_perf_commission.py
src/backtest/: engine.py  performance.py
src/core/: events.py
src/data/: csv_handler.py
src/engine/: event_loop.py
src/execution/: commission.py  paper.py
src/modes/: backtest.py  dryrun.py
src/portfolio/: commission.py  performance_portfolio.py
src/utils/: logging.py
tests/: test_perf_commission.py
